test/analyzer/input_programs/invalid_programs/program06.tea
invalidUseOfRelOp := true and 11